<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13196" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
    <device id="retina5_5" orientation="portrait">
        <adaptation id="fullscreen"/>
    </device>
    <dependencies>
        <deployment identifier="iOS"/>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13173"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--View Controller-->
        <scene sceneID="tne-QT-ifu">
            <objects>
                <viewController storyboardIdentifier="ViewController" id="BYZ-38-t0r" customClass="ViewController" customModule="KeyboardScrollView" customModuleProvider="target" sceneMemberID="viewController">
                    <layoutGuides>
                        <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                        <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
                    </layoutGuides>
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Wzy-ut-11a" userLabel="ScrollView">
                                <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                                <subviews>
                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="5TW-I8-CDN" userLabel="ContentView">
                                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                                        <subviews>
                                            <textField opaque="NO" clipsSubviews="YES" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Text Field 1" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="I4r-nH-Lod" userLabel="Text Field 1">
                                                <rect key="frame" x="40" y="352" width="334" height="30"/>
                                                <nil key="textColor"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                <textInputTraits key="textInputTraits" returnKeyType="next"/>
                                                <connections>
                                                    <outlet property="delegate" destination="BYZ-38-t0r" id="V8C-IH-1Yv"/>
                                                </connections>
                                            </textField>
                                            <textField opaque="NO" clipsSubviews="YES" tag="2" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Text Field 2" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="i8C-B4-0bz" userLabel="Text Field 2">
                                                <rect key="frame" x="40" y="417" width="334" height="30"/>
                                                <nil key="textColor"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                <textInputTraits key="textInputTraits" returnKeyType="next"/>
                                                <connections>
                                                    <outlet property="delegate" destination="BYZ-38-t0r" id="ezO-Fi-jSC"/>
                                                </connections>
                                            </textField>
                                            <textField opaque="NO" clipsSubviews="YES" tag="3" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Text Field 3" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="U7Y-Wy-nc7" userLabel="Text Field 3">
                                                <rect key="frame" x="40" y="482" width="334" height="30"/>
                                                <nil key="textColor"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                <textInputTraits key="textInputTraits" returnKeyType="next"/>
                                                <connections>
                                                    <outlet property="delegate" destination="BYZ-38-t0r" id="vmz-2J-IAk"/>
                                                </connections>
                                            </textField>
                                            <textField opaque="NO" clipsSubviews="YES" tag="4" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Text Field 4" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Uil-1U-cBt" userLabel="Text Field 4">
                                                <rect key="frame" x="40" y="547" width="334" height="30"/>
                                                <nil key="textColor"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                <textInputTraits key="textInputTraits" returnKeyType="done"/>
                                                <connections>
                                                    <outlet property="delegate" destination="BYZ-38-t0r" id="ohW-zK-arj"/>
                                                </connections>
                                            </textField>
                                        </subviews>
                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                        <gestureRecognizers/>
                                        <constraints>
                                            <constraint firstAttribute="trailing" relation="lessThanOrEqual" secondItem="I4r-nH-Lod" secondAttribute="trailing" constant="40" id="0GT-TX-J6F"/>
                                            <constraint firstItem="I4r-nH-Lod" firstAttribute="leading" secondItem="5TW-I8-CDN" secondAttribute="leading" constant="40" id="AQM-va-xfB"/>
                                            <constraint firstAttribute="trailing" relation="lessThanOrEqual" secondItem="i8C-B4-0bz" secondAttribute="trailing" constant="40" id="AyY-7S-pOC"/>
                                            <constraint firstItem="i8C-B4-0bz" firstAttribute="top" secondItem="I4r-nH-Lod" secondAttribute="bottom" constant="35" id="HQt-L3-Opj"/>
                                            <constraint firstItem="U7Y-Wy-nc7" firstAttribute="top" secondItem="i8C-B4-0bz" secondAttribute="bottom" constant="35" id="Lnf-sl-RXP"/>
                                            <constraint firstItem="Uil-1U-cBt" firstAttribute="top" secondItem="U7Y-Wy-nc7" secondAttribute="bottom" constant="35" id="R1d-Te-oXQ"/>
                                            <constraint firstAttribute="trailing" relation="lessThanOrEqual" secondItem="Uil-1U-cBt" secondAttribute="trailing" constant="40" id="aWE-nv-UjM"/>
                                            <constraint firstItem="Uil-1U-cBt" firstAttribute="leading" secondItem="5TW-I8-CDN" secondAttribute="leading" constant="40" id="c0M-Yr-8bU"/>
                                            <constraint firstAttribute="trailing" relation="lessThanOrEqual" secondItem="U7Y-Wy-nc7" secondAttribute="trailing" constant="40" id="dnO-KV-MM8"/>
                                            <constraint firstItem="U7Y-Wy-nc7" firstAttribute="leading" secondItem="5TW-I8-CDN" secondAttribute="leading" constant="40" id="fAm-4V-mUq"/>
                                            <constraint firstAttribute="bottom" secondItem="Uil-1U-cBt" secondAttribute="bottom" priority="999" constant="159" id="gOx-P1-cvG"/>
                                            <constraint firstItem="I4r-nH-Lod" firstAttribute="top" secondItem="5TW-I8-CDN" secondAttribute="top" constant="352" id="iMs-5W-OJ4"/>
                                            <constraint firstItem="i8C-B4-0bz" firstAttribute="leading" secondItem="5TW-I8-CDN" secondAttribute="leading" constant="40" id="uKg-nv-UHU"/>
                                        </constraints>
                                        <connections>
                                            <outletCollection property="gestureRecognizers" destination="ScD-OK-pat" appends="YES" id="fho-UI-0Aq"/>
                                        </connections>
                                    </view>
                                </subviews>
                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                <gestureRecognizers/>
                                <constraints>
                                    <constraint firstAttribute="trailing" secondItem="5TW-I8-CDN" secondAttribute="trailing" id="H7E-Mm-N6q"/>
                                    <constraint firstAttribute="bottom" secondItem="5TW-I8-CDN" secondAttribute="bottom" id="bDi-d3-Y07"/>
                                    <constraint firstItem="5TW-I8-CDN" firstAttribute="top" secondItem="Wzy-ut-11a" secondAttribute="top" id="kpi-Ba-vgz"/>
                                    <constraint firstItem="5TW-I8-CDN" firstAttribute="width" secondItem="Wzy-ut-11a" secondAttribute="width" id="opi-1L-lCs"/>
                                    <constraint firstItem="5TW-I8-CDN" firstAttribute="leading" secondItem="Wzy-ut-11a" secondAttribute="leading" id="xf1-8f-hnQ"/>
                                </constraints>
                            </scrollView>
                        </subviews>
                        <color key="backgroundColor" red="0.90196078430000004" green="0.90196078430000004" blue="0.90196078430000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                        <gestureRecognizers/>
                        <constraints>
                            <constraint firstAttribute="trailing" secondItem="Wzy-ut-11a" secondAttribute="trailing" id="DoP-bd-unw"/>
                            <constraint firstItem="Wzy-ut-11a" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="QwP-JG-ZlD"/>
                            <constraint firstItem="Wzy-ut-11a" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="ST6-BY-OtJ"/>
                            <constraint firstAttribute="bottom" secondItem="Wzy-ut-11a" secondAttribute="bottom" id="iA6-Na-s1w"/>
                        </constraints>
                    </view>
                    <connections>
                        <outlet property="contentView" destination="5TW-I8-CDN" id="BHK-BB-9bD"/>
                        <outlet property="scrollView" destination="Wzy-ut-11a" id="Szc-AZ-4nj"/>
                        <outlet property="tapGestureRecognizer" destination="ScD-OK-pat" id="Nyz-Fc-Sep"/>
                        <outlet property="textField1" destination="I4r-nH-Lod" id="dXn-rh-LKU"/>
                        <outlet property="textField2" destination="i8C-B4-0bz" id="Fei-0a-hDB"/>
                        <outlet property="textField3" destination="U7Y-Wy-nc7" id="9Xb-Pz-IpD"/>
                        <outlet property="textField4" destination="Uil-1U-cBt" id="49b-eI-Rxj"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
                <tapGestureRecognizer id="ScD-OK-pat">
                    <connections>
                        <action selector="tapHideKeyboard:" destination="BYZ-38-t0r" id="lfg-N9-WZ6"/>
                    </connections>
                </tapGestureRecognizer>
            </objects>
            <point key="canvasLocation" x="136.80000000000001" y="137.18140929535232"/>
        </scene>
    </scenes>
</document>
