...
    }

}

extension ScrollKeyboardViewController: UITextFieldDelegate {
    
    // Used to handle moving to the next field on "Next" button tap
    // and resigning first responder on "Done" tap
     func textFieldShouldReturn(_ textField: UITextField) -> Bool
    {
        if textField.returnKeyType == .next
        {
            let next:UITextField = self.view.viewWithTag(textField.tag+1) as! UITextField
            next.becomeFirstResponder()
...
